# ragpill

./: .gitignore  .pre-commit-config.yaml  AGENT.md  CLAUDE.md  DOCUMENTATION-AGENT.md  LICENSE  README.md  TODO.md  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: ci.yml  docs.yml  publish.yml
0.1.0/: 404.html  index.html  objects.inv  sitemap.xml
0.1.0/api/base/: index.html
0.1.0/api/environment/: index.html
0.1.0/api/evaluators/: index.html
0.1.0/api/mlflow/: index.html
0.1.0/development/contributing/: index.html
0.1.0/development/roadmap/: index.html
0.1.0/getting-started/installation/: index.html
0.1.0/getting-started/quickstart/: index.html
0.1.0/guide/overview/: index.html
0.1.0/guide/testsets/: index.html
0.1.0/how-to/custom-type-evaluator/: index.html
0.1.0/search/: search_index.json
0.1/api/base/: index.html
0.1/api/csv/: index.html
0.1/api/utils/: index.html
0.1/development/contributing/: index.html
0.1/guide/csv-adapter/: index.html
0.1/guide/evaluators/: index.html
0.1/how-to/: custom-type-evaluator.ipynb
0.1/how-to/custom-evaluator/: index.html
0.1/search/: search_index.json
0.1/tutorials/: full.ipynb
0.1/tutorials/full/: index.html
0.2/: 404.html  index.html  objects.inv  sitemap.xml
0.2/api/base/: index.html
0.2/api/csv/: index.html
0.2/api/environment/: index.html
0.2/api/evaluators/: index.html
0.2/api/mlflow/: index.html
0.2/api/types/: index.html
0.2/api/utils/: index.html
0.2/development/contributing/: index.html
0.2/development/roadmap/: index.html
0.2/getting-started/installation/: index.html
0.2/getting-started/quickstart/: index.html
0.2/guide/csv-adapter/: index.html
0.2/guide/evaluators/: index.html
0.2/guide/overview/: index.html
0.2/guide/repeated-runs/: index.html
0.2/guide/testsets/: index.html
0.2/how-to/custom-evaluator/: index.html
0.2/how-to/custom-type-evaluator/: index.html
0.2/how-to/task-factory/: index.html
0.2/search/: search_index.json
0.2/tutorials/full/: index.html
0.3/: 404.html  index.html  objects.inv  sitemap.xml
0.3/api/base/: index.html
0.3/api/csv/: index.html
0.3/api/environment/: index.html
0.3/api/eval_types/: index.html
0.3/api/evaluation/: index.html
0.3/api/evaluators/: index.html
0.3/api/execution/: index.html
0.3/api/llm_judge/: index.html
0.3/api/mlflow/: index.html
0.3/api/report/: index.html
0.3/api/types/: index.html
0.3/api/upload/: index.html
0.3/api/utils/: index.html
0.3/development/contributing/: index.html
0.3/development/roadmap/: index.html
0.3/getting-started/installation/: index.html
0.3/getting-started/quickstart/: index.html
0.3/guide/csv-adapter/: index.html
0.3/guide/evaluators/: index.html
0.3/guide/layered-architecture/: index.html
0.3/guide/llm-reports/: index.html
0.3/guide/overview/: index.html
0.3/guide/repeated-runs/: index.html
0.3/guide/testsets/: index.html
0.3/how-to/: custom-evaluator.ipynb  custom-type-evaluator.ipynb
0.3/how-to/custom-evaluator/: index.html
0.3/how-to/custom-type-evaluator/: index.html
0.3/how-to/evaluate-historical-outputs/: index.html
0.3/how-to/task-factory/: index.html
0.3/search/: search_index.json
0.3/tutorials/full/: index.html
0.4/: 404.html  index.html  objects.inv  sitemap.xml
0.4/api/csv/: index.html
0.4/api/environment/: index.html
0.4/api/eval_types/: index.html
0.4/api/evaluators/: index.html
0.4/api/report/: index.html
0.4/api/types/: index.html
0.4/api/upload/: index.html
0.4/api/utils/: index.html
0.4/development/contributing/: index.html
0.4/getting-started/installation/: index.html
0.4/guide/llm-reports/: index.html
0.4/guide/overview/: index.html
0.4/guide/repeated-runs/: index.html
0.4/guide/testsets/: index.html
0.4/how-to/custom-evaluator/: index.html
0.4/how-to/task-factory/: index.html
0.4/search/: search_index.json
designs/: concurrent-scheduling.md  evaluator-logical-operations.md  langfuse-integration.md  layered-execution-evaluation.md  llm-readable-outputs-and-mcp.md  otel-trace-ingestion.md  remove-pydantic-evals.md
docs/: index.md
docs/api/: base.md  csv.md  environment.md  eval_types.md  evaluation.md  evaluators.md  execution.md  llm_judge.md  mlflow.md  report.md  types.md  upload.md  utils.md
docs/development/: contributing.md  roadmap.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: csv-adapter.md  evaluators.md  layered-architecture.md  llm-reports.md  overview.md  repeated-runs.md  testsets.md
docs/how-to/: custom-evaluator.ipynb  evaluate-historical-outputs.md  task-factory.md
docs/tutorials/: full.ipynb
plans/: RAGPILL_MULTI_RUN_EVALUATION_PLAN.md  adr-system.md  layered-execution-evaluation.md  literal-quote-evaluator-improvements.md  llm-readable-outputs-and-mcp.md  metric-evaluators.md  multi-backend-tracking.md  per-attribute-accuracy.md  per-tag-accuracy.md  repeat-task-runs-implementation.md  repeat-task-runs.md  suppress-llm-judge-traces.md
src/ragpill/: __init__.py  base.py  eval_types.py  evaluation.py  evaluators.py  execution.py  llm_judge.py  mlflow_helper.py  settings.py  types.py  upload.py  utils.py
tests/: conftest.py  test_aggregation.py  test_backends.py  test_base.py  test_clean_quote_text.py  test_dataframe.py  test_eval_types.py  test_evaluation.py  test_evaluation_output_json_roundtrip.py  test_evaluator_isolation.py  test_execution.py  test_execution_integration.py  test_has_quotes.py  test_literal_quote_improvements.py  test_literal_quotes.py  test_llm_judge.py  test_mlflow_integration.py  test_normalization.py  test_per_attribute_accuracy.py  test_per_tag_accuracy.py  test_regex_in_doc_metadata.py  test_regex_in_output.py  test_regex_in_sources.py  test_report_exploration.py  test_report_text.py  test_report_trace.py  test_report_triage.py  test_settings.py  test_tag_distribution.py  test_task_factory.py  test_testset_csv.py  test_types.py  test_upload.py
tests/data/: testset.csv  testset_example.csv  testset_repeat.csv  testset_with_global.csv
(+15 files in other folders)
