[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "ragpill"
version = "0.4.1"
description = "This library allows for granular testing of llm-applications based on expert input."
readme = "README.md"
authors = [{ name = "Joel Gotsch", email = "contact@joelgotsch.com" }]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai-slim[openai]>=1.55.0",
    "mlflow-skinny>=3.8.1",
    "sqlalchemy>=2.0.31", # for mlflow
    "alembic>=1.10.1", # for mlflow
    "pandas>=2.2.3",
    "pydantic-settings>=2.0.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.31.3",
    "pytest>=8.3.3",
    "pytest-pretty>=1.2.0",
    "isort>=5.13.2",
    "ruff>=0.8.0",
    "anyio[trio]>=4.9.0",
    "pytest-cov>=6.0.0",
    "coverage[toml]>=7.6.0",
    "genbadge[coverage]>=1.1.3",
]

docs = [
    "zensical>=0.0.32",           # replaces mkdocs + mkdocs-material
    "mkdocstrings[python]>=0.26.0",
    "mkdocs-autorefs>=1.2.0",
    "mike>=2.1.3",                # versioning documentation
    "nbconvert>=7.0.0",          # pre-convert notebooks to markdown
    "ipywidgets>=8.1.8",
]
build_docs = [
    "qdrant-client>=1.12.0",
]


[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
extend-select = ["RUF", "C90", "UP", "I"]
mccabe = { max-complexity = 19 }

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportUnnecessaryTypeIgnoreComment = true
reportIgnoreCommentWithoutRule = true
reportUnusedParameter = true
reportIncompatibleUnannotatedOverride = true
reportImplicitAbstractClass = true
reportMissingTypeStubs = false
reportMissingModuleSource = false
include = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--tb=short",
    "--cov=ragpill",
    "--cov-report=term-missing",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["ragpill"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.coverage.paths]
source = ["src/ragpill", "*/site-packages/ragpill"]

[tool.tox]
legacy_tox_ini = """
[tox]
requires =
    tox>=4.23
    tox-uv>=1.17
min_version = 4.0
env_list =
    lint
    type
    py{311,312,313}-highest
    py{311,312,313}-lowest

[testenv]
runner = uv-venv-runner
dependency_groups = dev
commands =
    pytest {posargs}

[testenv:py{311,312,313}-lowest]
uv_resolution = lowest-direct

[testenv:lint]
skip_install = true
dependency_groups = dev
commands =
    ruff check src tests
    ruff format --check src tests

[testenv:type]
dependency_groups = dev
commands =
    basedpyright
"""
