[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "ragpill"
version = "0.1.0"
description = "This library allows for granular testing of llm-applications based on expert input."
readme = "README.md"
authors = [{ name = "Joel Gotsch", email = "contact@joelgotsch.com" }]
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai>=1.39.1",
    "mlflow>=3.8.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.31.3",
    "pytest>=8.3.3",
    "pytest-pretty>=1.2.0",
    "isort>=5.13.2",
    "ruff>=0.8.0",
    "pytest-cov>=6.0.0",
    "coverage[toml]>=7.6.0",
]

docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
    "mkdocs-jupyter>=0.25.0",
    "mkdocs-autorefs>=1.2.0",
    "mike>=2.1.3", # versioning documentation
]
build_docs = [
    "qdrant-client>=1.12.0",
]


[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
extend-select = ["Q", "RUF", "C90", "UP", "I"]
mccabe = { max-complexity = 18 }

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportUnnecessaryTypeIgnoreComment = true
reportIgnoreCommentWithoutRule = true
reportUnusedParameter = true
reportIncompatibleUnannotatedOverride = true
reportImplicitAbstractClass = true
reportMissingTypeStubs = false
reportMissingModuleSource = false
include = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--tb=short",
    "--cov=ragpill",
    "--cov-report=term-missing",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["ragpill"]
branch = true
omit = ["tests/*", "*/site-packages/*"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.coverage.paths]
source = ["src/ragpill", "*/site-packages/ragpill"]

[tool.tox]
legacy_tox_ini = """
[tox]
requires =
    tox>=4.23
    tox-uv>=1.17
min_version = 4.0
env_list =
    lint
    type
    py{311,312,313}-highest
    py{311,312,313}-lowest

[testenv]
runner = uv-venv-runner
dependency_groups = dev
commands =
    pytest {posargs}

[testenv:py{311,312,313}-lowest]
uv_resolution = lowest-direct

[testenv:lint]
skip_install = true
dependency_groups = dev
commands =
    ruff check src tests
    ruff format --check src tests

[testenv:type]
dependency_groups = dev
commands =
    basedpyright
"""
